--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -1,45 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>com.fintech</groupId>
-    <artifactId>auth-service</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
-    <name>auth-service</name>
-    <description>Auth Service for Fintech App</description>
-
-    <!-- Herdar do Spring Boot Starter Parent -->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.2.4</version> <!-- Use uma versão recente -->
+        <version>3.2.4</version>
         <relativePath/>
     </parent>
+    <groupId>com.example</groupId>
+    <artifactId>fintech-transaction-service</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <name>fintech-transaction-service</name>
+    <description>Microsserviço de transações para fintech</description>
 
     <properties>
-        <java.version>17</java.version> <!-- Ajuste para a versão do Java que você está usando -->
+        <java.version>17</java.version>
     </properties>
 
     <dependencies>
-        <!-- Dependência básica do Spring Boot -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
-        <!-- Para aplicações web (inclui Spring MVC para @RestController, etc.) -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- Para testes -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -51,5 +33,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
